// Vitest Snapshot v1

exports[`<UserGroups /> > should render 1`] = `
<div>
  <label>
    Groups
  </label>
  <Styled(Styled(styled.div))>
    <UserGroup
      id="foo"
      key="foo"
      onClick={[Function]}
      toggled={true}
    />
    <UserGroup
      id="bar"
      key="bar"
      onClick={[Function]}
      toggled={false}
    />
    <UserGroup
      id="baz"
      key="baz"
      onClick={[Function]}
      toggled={false}
    />
  </Styled(Styled(styled.div))>
</div>
`;

exports[`<UserGroups /> > should render LoadingPlaceholder when [documents=null] 1`] = `<LoadingPlaceholder />`;

exports[`<UserGroups /> > should render NoneFound when [documents=[]] 1`] = `
<div>
  <label>
    Groups
  </label>
  <Styled(Styled(styled.div))>
    <NoneFoundSection
      key="noneFound"
      noun="groups"
    />
  </Styled(Styled(styled.div))>
</div>
`;
